update product rules